# forms-builder-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  skills-lock.json
.claude/skills/: mongodb
app/: main.py
app/api/: deps.py
app/api/routers/: analytics.py  auth.py  files.py  forms.py  health.py  responses.py
app/core/: config.py  db.py  exceptions.py  rate_limit.py  security.py
app/db/: indexes.py
app/models/: form.py  py_object_id.py  response.py  user.py
app/repositories/: files_repo.py  forms_repo.py  responses_repo.py  users_repo.py
app/schemas/: analytics.py  auth.py  file.py  form.py  response.py
app/services/: analytics_service.py  auth_service.py  file_service.py  form_service.py  response_service.py
scripts/: e2e.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_drafts.py  test_export.py  test_files.py  test_forms.py  test_health.py  test_indexes.py  test_responses.py  test_security.py
