[project]
name = "fastapi-mongo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "gunicorn>=26.0.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pymongo>=4.13",
    "python-multipart>=0.0.32",
    "uvicorn-worker>=0.4.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "COM"]
ignore = ["COM812"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
